# serializer version: 1
# name: test_setup_config_entry[config_entry_extra_options0]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My template',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_template',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup_config_entry[config_entry_extra_options1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'My template',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.my_template',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
